# sudokusolve

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: alloc.rs  color.rs  constraint.rs  main.rs  sudoku.rs  ui.rs  z3_helper.rs
src/constraint/: anti_knight.rs  arrow.rs  diagonal.rs  digit_definition.rs  entropic_line.rs  equal_sum.rs  german_whisper.rs  given_digit.rs  killer_cage.rs  kropki.rs  latin_square.rs  little_killer.rs  mod.rs  palindrome.rs  parity.rs  renban.rs  standard_boxes.rs  thermo.rs  x_sum.rs
