[package]
name = "sudokusolve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ahash = "0.8.0"
eframe = "0.19.0"
macros = { path = "macros" }
ouroboros = "0.15.5"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
z3 = { version = "0.11.2" }

[features]

static-link-z3 = ["z3/static-link-z3"]
